Rewrote index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
 <html>
-    <body>
-        <p>TEST</p>
-    </body>
+	<head>
+		<title>Shuen Yasui</title>
+		<style>
+		body {
+			font-family: Helvetica;
+			font-size: 0.8em;
+		}
+		</style>
+	</head>
+	<body>
+		<p></p>
+	
+		<p align=center>
+		2017 Copyright. All rights reserved.
+		</p>
+		
+		<p align=center>
+		This page is under construction.
+		</p>
+	</body>
 </html>
