--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <h<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <style>
         html {
@@ -89,6 +88,7 @@
         }
     </style>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1"> 
         <title>Shuen Yasui's Profile Website</title>
     </head>
     <body>
