Corrected meta tag and charset

--- a/contacts.html
+++ b/contacts.html
@@ -1,107 +1,108 @@
 ﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <style>
-        html {
-            overflow-y: scroll;
-        }
+    <head>
+        <meta charset="UTF-8">
+        <style>
+            html {
+                overflow-y: scroll;
+            }
 
-        body {
-            background-color: rgb(232, 234, 237);
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: .8em;
-            color: black;
-            margin: 0;
-        }
+            body {
+                background-color: rgb(232, 234, 237);
+                font-family: Arial, Helvetica, sans-serif;
+                font-size: .8em;
+                color: black;
+                margin: 0;
+            }
 
-        h1 {
-            font-size: 2em;
-        }
+            h1 {
+                font-size: 2em;
+            }
 
-        hr {
-            border: 0px;
-            border-top: 1px dashed black;
-        }
+            hr {
+                border: 0px;
+                border-top: 1px dashed black;
+            }
 
-        .navbar {
-            overflow: hidden;
-            background-color: #34343d;
-            color: white;
-            position: fixed;
-            top: 0;
-            width: 100%;
-        }
-
-            .navbar a {
-                display: block;
-                float: left;
-                padding: 10px;
+            .navbar {
+                overflow: hidden;
+                background-color: #34343d;
                 color: white;
-                text-decoration: none;
+                position: fixed;
+                top: 0;
+                width: 100%;
             }
 
-        .namebox {
-            display: block;
-            padding: 10px;
-            margin: auto;
-            float: right;
-            color: orange;
-        }
+                .navbar a {
+                    display: block;
+                    float: left;
+                    padding: 10px;
+                    color: white;
+                    text-decoration: none;
+                }
 
-            .namebox a {
+            .namebox {
                 display: block;
-                float: left;
                 padding: 10px;
-                color: white;
-                text-decoration: none;
+                margin: auto;
+                float: right;
+                color: orange;
             }
 
-        .navbarbox {
-            width: 800px;
-            margin: auto;
-        }
+                .namebox a {
+                    display: block;
+                    float: left;
+                    padding: 10px;
+                    color: white;
+                    text-decoration: none;
+                }
 
-        .navbar a:hover {
-            background-color: white;
-            color: black;
-        }
-
-        .mainbox {
-            background-color: white;
-            width: 760px;
-            margin: auto;
-            margin-top: 0px;
-            padding: 20px
-        }
-
-            .mainbox span {
-                display: block;
-                padding: 20px;
-            }
-
-            .mainbox img {
-                display: block;
+            .navbarbox {
+                width: 800px;
                 margin: auto;
             }
 
-        .footer {
-            display: block;
-            background-color: #34343d;
-            width: 760px;
-            margin: auto;
-            padding: 20px;
-            padding-top: 5px;
-        }
+            .navbar a:hover {
+                background-color: white;
+                color: black;
+            }
 
-        .footerbox {
-            display: block;
-            margin: auto;
-            color: white;
-            float: right;
-        }
-    </style>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <title>Shuen Yasui's Profile Website</title>
+            .mainbox {
+                background-color: white;
+                width: 760px;
+                margin: auto;
+                margin-top: 0px;
+                padding: 20px
+            }
+
+                .mainbox span {
+                    display: block;
+                    padding: 20px;
+                }
+
+                .mainbox img {
+                    display: block;
+                    margin: auto;
+                }
+
+            .footer {
+                display: block;
+                background-color: #34343d;
+                width: 760px;
+                margin: auto;
+                padding: 20px;
+                padding-top: 5px;
+            }
+
+            .footerbox {
+                display: block;
+                margin: auto;
+                color: white;
+                float: right;
+            }
+        </style>
+        <title>Shuen Yasui's Profile Website</title>
+    </head>
     <body>
         <div class="navbar">
             <div class="navbarbox">
