--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
     <head>
+        <meta charset="UTF-8">
         <style>
             html {
                 overflow-y: scroll;
@@ -88,7 +89,6 @@
                 float: right;
             }
         </style>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"> 
         <title>Shuen Yasui's Profile Website</title>
     </head>
     <body>
