--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<p></p>
 			<p>Since my Close Similar Tabs browser extension for Firefox was released on mozilla.org it has been downloaded several hundred times. I’ve received useful feedback from users; I have decided to implement some of these requested features. First, a simple way to view the number of similar tabs prior to activing the close action was requested. I’ve decided to implement a dynamic counter right into the drop-down menu which is displayed when any tab is right-clicked. It works by listening for the right-click event on a tab, once activated, all open tabs are parsed; similar tabs are tallied and displayed in brackets next the Close Similar Tab menu item. The second new feature is a confirmation before closing multiple tabs. Due to limitations of the WebExtensions API, I could not use a traditional windows dialog box similar to ones found on desktop applications, In order to mimic a dialog box, the extension opens a small browser window displaying an HTML page. The small window will ask for confirmation to close multiple tab and it will display the number of tabs affected. The window will also include UI elements such as buttons and checkboxes and the option for users to diable the feature in case they do not wish to see the dialog box again. The extension’s Options page was also updated with the ability to toggle on/off the confirmation dialog.</p>
 			<p><a href="https://addons.mozilla.org/en-US/firefox/addon/close-similar-tabs/">Download the Add-on for Firefox here</a></p>
-			<img style="border: black 1px solid" src="images/closeSimilarTabs2Screenshot.png">
+			<img src="images/closeSimilarTabs2Screenshot.png" style="border:black 1px solid">
 			<br>
 			<hr>
 			<h1>Project: Firefox Extension, Close Similar Tabs</h1>
