Added new project entry - Double Helix. Added new page and js for Double Helix.

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
             </div>
         </div>
         <div class="mainbox">
+			<h1>Project: HTML5 Animation - Double Helix</h1>
+			<p>Date: 5/15/2019</p>
+			<p></p>
+			<p>I started this project to experiment with the canvas element in HTML5. It started with simple circles drawn on the canvas which I then animated in JavaScript. I gave each circle a repeating elliptical path then drew a line joining coupled pairs. As each circle rotates along its path it will scale in size slightly, adding depth to the animation. This became a single layer which was then repeated in a stacked pattern. Each layer was given a unique velocity depending on its y position, this gave the animation an interesting helix-like effect. I then finally added a fade effect by adjusting the transparency at each layer also dependent to its y position. No frameworks, libraries or templates used.</p>
+			<p><a href ="https://github.com/shuen-yasui/HTML5-DoubleHelixEffect">Source available on GitHub</a></p>
+			<p>View the animation here: <a href="DoubleHelixEffect.html">Double Helix</p>
+			<img src="images/doublehelix.png"></a>
+			<br>
+			<hr>
 			<h1>Project: Firefox Extension, Close Similar Tabs Version 2.0</h1>
 			<p>Date: 5/8/2019</p>
 			<p></p>
