add span to nav bar

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <div class="navbarbox">
                 <a href="index.html">PROJECTS</a>
                 <a href="contacts.html">CONTACT</a>
+				<span>bootstrap</span>
                 <div class="namebox">SHUEN YASUI</div>
             </div>
         </div>
