--- a/about.html
+++ b/about.html
@@ -1,29 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
   <meta charset="UTF-8">
-  <script>
-    (function(i, s, o, g, r, a, m) {
-      i['GoogleAnalyticsObject'] = r;
-      i[r] = i[r] || function() {
-        (i[r].q = i[r].q || []).push(arguments)
-      }, i[r].l = 1 * new Date();
-      a = s.createElement(o),
-        m = s.getElementsByTagName(o)[0];
-      a.async = 1;
-      a.src = g;
-      m.parentNode.insertBefore(a, m)
-    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-    ga('create', 'UA-105318933-1', 'auto');
-    ga('send', 'pageview');
-  </script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <style>
-  html {
-      overflow-y:scroll;
-  }
+    html {
+      overflow-y: scroll;
+    }
   </style>
   <title>Shuen Yasui's Profile Website</title>
 </head>
@@ -35,19 +19,18 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
+
         <div class="container">
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">PROJECTS</a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="about.html">ABOUT<span class="sr-only">(current)</span></a>
-              </li>
-              </li>
-            </ul>
-            <span class="navbar-text">SHUEN YASUI</span>
-          </div>
+          <ul class="navbar-nav mr-auto float-left">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">PROJECTS</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="about.html">ABOUT<span class="sr-only">(current)</span></a>
+            </li>
+            </li>
+          </ul>
+          <span class="navbar-text float-right">SHUEN YASUI</span>
         </div>
       </div>
     </nav>
@@ -59,17 +42,22 @@
     <div class="container">
       <h4>Thank you for visiting. I created this website to showcase my coding projects and to document my progression in programming.</h4>
       <div style="padding:20px"></div>
-      <a href="https://github.com/shuen-yasui"><h5><img src="open-iconic/png/book-2x.png">  GitHub</h5></a>
-      <a href=""><h5><img src="open-iconic/png/person-2x.png">  LinkedIn</h5></a>
-      <a href="mailto:shuenyasui@gmail.com"><h5><img src="open-iconic/png/envelope-closed-2x.png"> Contact</h5></a>
+      <a href="https://github.com/shuen-yasui">
+        <h5><img src="open-iconic/png/book-2x.png"> GitHub</h5>
+      </a>
+      <a href="">
+        <h5><img src="open-iconic/png/person-2x.png"> LinkedIn</h5>
+      </a>
+      <a href="mailto:shuenyasui@gmail.com">
+        <h5><img src="open-iconic/png/envelope-closed-2x.png"> Contact</h5>
+      </a>
     </div>
   </main>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script>
-    window.jQuery || document.write('<script src="/docs/4.3/assets/js/vendor/jquery-slim.min.js"><\/script>')
-  </script>
-  <script src="/docs/4.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous">
-  </script>
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>(function(i, s, o, g, r, a, m) {i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function() {(i[r].q = i[r].q || []).push(arguments)}, i[r].l = 1 * new Date();a = s.createElement(o),m = s.getElementsByTagName(o)[0];a.async = 1;a.src = g;m.parentNode.insertBefore(a, m)})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');ga('create', 'UA-105318933-1', 'auto');ga('send', 'pageview');</script>
 </body>
 </html>
