Add new SolarSystem page and js. New project entry on index. Corrected tags on about to fix mobile issue.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
       </div>
     </div>
     <div class="container">
+      <h3>HTML5 Animation - Solar System</h3>
+      <p>Date: 5/25/2019</p>
+      <p></p>
+      <p>I made this animation similating our solar system. The circles drawn on a HTML5 canvas represents different planets. Their orbit speed ratio is based off actual data and gives the animation a simple visual comparison, for example it takes Mars roughly twice as long to complete a orbit around the sun. Rather than leaving the orbit path blank I opted to draw strings of faint circles for each path. The animation is scaled down in the vertical axis giving it an added effect of depth. I've also added a MouseOver eventListener to make the animation interactive, it changes a planet's color red and display its name when the mouse is hovered over it. Note, the planets' size, distance and location are not scaled to real proportions. Made using HTML5 and JavaScript.</p>
+      <p><a href="https://github.com/shuen-yasui/HTML5-SolarSystem">Source available on GitHub</a></p>
+      <p>View the animation here: <a href="SolarSystem.html">Solar System</p>
+      <img class="img-fluid rounded-circle mx-auto d-block" src="images/solarsystem01.png"></a>
+      <br>
+      <hr>
       <h3>Website Redesign with Bootstrap</h3>
       <p>Date: 5/17/2019</p>
       <p></p>
@@ -117,8 +126,6 @@
       <img class="img-fluid rounded mx-auto d-block" src="images/newsSourceGraphJan2017toJuly2017small.png" alt="Graph of news sources on /r/news">
     </div>
   </main>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
